test/testdata/variables/unused_global_error_declared.lox
var a; // error: a has been declared but is never used
var b = "used";
print b;
